--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ index.html
     <section class="chamada">
         <div class="chamada-texto">
             <h1>o inimigo agora é outro</h1>
-            <p>#tropa de elite 2</p>
+            <p>#os mercenarios 2</p>
         </div>
 
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/eQXuGxGz2yc?si=RqzLL1z6VwP12CED"
+            <iframe width="560" height="315" src="https://youtu.be/SBoODpO-DT0?si=5NCy35o8VhqfMvSb"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
