--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ index.html
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>o inimigo agora é outro</h1>
+            <h1> O inimigo agora é outro</h1>
             <p>#os mercenarios 2</p>
         </div>
 
