--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ index.html
     <section class="chamada">
         <div class="chamada-texto">
             <h1> o inimigo agora é outro</h1>
-            <p>#os mercenarios 2</p>
+            <p>#O duelo de Ayrton Senna x Alain Prost em Suzuka 1989</p>
         </div>
-
+7
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/SBoODpO-DT0?si=5NCy35o8VhqfMvSb"
+            <iframe width="560" height="315" src="https://youtu.be/203SR9tScfs?si=tUvKxJsr1_UvIPk6"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
