--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ index.html
     <section class="chamada">
         <div class="chamada-texto">
             <h1> o inimigo agora é outro</h1>
-            <p>#https://youtu.be/FX1_BVBdYFk?si=OQcGCUxB2l9Zlf85</p>
+            <p>#https://youtu.be/0lzRHkrsM0g?si=4TefN5EFywc2S_HJ</p>
         </div>
 7
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/VSuJMt-AiII?si=FrldZfjiYaxDuRNf"
+            <iframe width="560" height="315" src="https://youtu.be/0lzRHkrsM0g?si=4TefN5EFywc2S_HJ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
