--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ index.html
     <section class="chamada">
         <div class="chamada-texto">
             <h1> o inimigo agora é outro</h1>
-            <p>#https://youtu.be/0lzRHkrsM0g?si=4TefN5EFywc2S_HJ</p>
+            <p>#homem aranha</p>
         </div>
 7
 
